# soap-making-back

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
ci-cd/: webapp.Dockerfile
scripts/: docker-entrypoint.sh
src/webapp/: manage.py
src/webapp/config/: asgi.py  settings.py  urls.py
src/webapp/soap_making/: admin.py  apps.py  models.py
src/webapp/soap_making/migrations/: 0001_initial.py
